@@ -32,7 +32,7 @@
 			<width>510</width>
 			<height>420</height>
 			<onleft>69</onleft>
-			<onright>82</onright>
+			<onright>9000</onright>
 			<onup>9000</onup>
 			<ondown>9000</ondown>
 			<viewtype label="535">list</viewtype>
@@ -113,11 +113,11 @@
 			<animation effect="slide" start="-700,0" time="800">Visible</animation>
 			<animation effect="slide" end="-700,0" time="800">Hidden</animation>
 			<visible>Skin.HasSetting(contactsdialog)</visible>
-			<posx>33</posx>
+			<posx>0</posx>
 			<posy>505</posy>
 			<control type="button" id="61">
 				<description>Add Contact Button</description>
-				<posx>130</posx>
+				<posx>85</posx>
 				<posy>0</posy>
       				<textoffsetx>2</textoffsetx>
       				<textoffsety></textoffsety>
@@ -136,12 +136,12 @@
 			</control>	
 			<control type="button" id="62">
 				<description>ALL Button</description>
-				<posx>283</posx>
+				<posx>238</posx>
 				<posy>0</posy>
       				<textoffsetx>2</textoffsetx>
       				<textoffsety></textoffsety>
 				<label>-</label>
-				<onright>62</onright>
+				<onright>63</onright>
 				<onup>50</onup>
 				<ondown>50</ondown>
 				<onleft>61</onleft>
@@ -152,7 +152,26 @@
 				<disabledcolor>60ffffff</disabledcolor>
 				<width>94</width>
 				<height>35</height>
-			</control>			
+			</control>	
+			<control type="button" id="63">
+				<description>Import Button</description>
+				<posx>391</posx>
+				<posy>0</posy>
+      				<textoffsetx>2</textoffsetx>
+      				<textoffsety></textoffsety>
+				<label>-</label>
+				<onright>63</onright>
+				<onup>50</onup>
+				<ondown>50</ondown>
+				<onleft>62</onleft>
+				<align>center</align>
+				<aligny>center</aligny>
+      				<texturefocus>XBbuttonF.png</texturefocus>
+				<texturenofocus>XBbuttonNF.png</texturenofocus>
+				<disabledcolor>60ffffff</disabledcolor>
+				<width>94</width>
+				<height>35</height>
+			</control>		
 		</control>
     </controls>
 
